launch worker in the background

--- a/default_launch.json
+++ b/default_launch.json
@@ -31,7 +31,11 @@
         }
       ],
       "load_balancing": {
-        "singleton_worker": {}
+        "auto_hex_grid": {
+	
+          "num_workers": 2
+        
+        }
       }
     },
     {
